(fix): tweaked spacing for categories

--- a/src/app/modules/pro/channel/channel.component.scss
+++ b/src/app/modules/pro/channel/channel.component.scss
@@ -160,14 +160,13 @@ m-pro--channel {
     grid-column: 2 / span 10;
 
     display: flex;
-    align-items: center;
     flex-wrap: wrap;
     justify-content: flex-end;
 
     .m-proChannel__category {
       cursor: pointer;
       color: var(--text-color);
-      padding: 0 16px;
+      padding: 16px 16px 0;
 
       &.m-proChannel__selectedCategory {
         color: var(--primary-color);
